--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,9 +20,15 @@
         <li class="nav-item" role="presentation">
             <button class="nav-link @(Model == "garage" ? "active" : "")" id="garage-tab" data-bs-toggle="tab" data-bs-target="#garage-tab-pane" type="button" role="tab"><i class="bi bi-car-front me-2"></i>Garage</button>
         </li>
-        <li class="nav-item ms-auto" role="presentation">
-            <button class="nav-link @(Model == "settings" ? "active" : "")" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings-tab-pane" type="button" role="tab"><i class="bi bi-gear me-2"></i>Settings</button>
-        </li>
+        @if (User.IsInRole(nameof(CarCareTracker.UserModel.IsRootUser)))
+        {
+            <li class="nav-item ms-auto" role="presentation">
+                <button class="nav-link" id="user-tab" data-bs-toggle="tab" data-bs-target="#user-tab-pane" type="button" role="tab"><i class="bi bi-people me-2"></i>Users</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link @(Model == "settings" ? "active" : "")" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings-tab-pane" type="button" role="tab"><i class="bi bi-gear me-2"></i>Settings</button>
+            </li>
+        }
         @if (enableAuth)
         {
             <li class="nav-item">
@@ -37,9 +43,8 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade @(Model == "settings" ? "show active" : "")" id="settings-tab-pane" role="tabpanel" tabindex="0">
-
-        </div>
+        <div class="tab-pane fade" id="user-tab-pane" role="tabpanel" tabindex="0"></div>
+        <div class="tab-pane fade @(Model == "settings" ? "show active" : "")" id="settings-tab-pane" role="tabpanel" tabindex="0"></div>
     </div>
 </div>
 
