--- a/Views/Home/_GarageDisplay.cshtml
+++ b/Views/Home/_GarageDisplay.cshtml
@@ -17,8 +17,11 @@
         </div>
     }
 }
-<div class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4">
-    <div class="card" onclick="showAddVehicleModal()" style="height:100%;">
-        <img src="/defaults/addnew_vehicle.png" style="object-fit:scale-down;height:100%;" />
+@if (User.IsInRole(nameof(UserModel.CanAdd)))
+{
+    <div class="col-xl-2 col-lg-4 col-md-4 col-sm-4 col-4">
+        <div class="card" onclick="showAddVehicleModal()" style="height:100%;">
+            <img src="/defaults/addnew_vehicle.png" style="object-fit:scale-down;height:100%;" />
+        </div>
     </div>
-</div>
+}
