--- a/Views/Home/_Settings.cshtml
+++ b/Views/Home/_Settings.cshtml
@@ -125,6 +125,8 @@
                             errorToast("An error occurred, please try again later.");
                         }
                     })
+                } else {
+                    $("#enableAuth").prop("checked", false);
                 }
             });
         } else {
