get users front end stuff.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         <li class="nav-item" role="presentation">
             <button class="nav-link @(Model == "garage" ? "active" : "")" id="garage-tab" data-bs-toggle="tab" data-bs-target="#garage-tab-pane" type="button" role="tab"><i class="bi bi-car-front me-2"></i>Garage</button>
         </li>
-        @if (User.IsInRole(nameof(CarCareTracker.UserModel.IsRootUser)))
+        @if (User.IsInRole(nameof(UserModel.IsRootUser)))
         {
             <li class="nav-item ms-auto" role="presentation">
                 <button class="nav-link" id="user-tab" data-bs-toggle="tab" data-bs-target="#user-tab-pane" type="button" role="tab"><i class="bi bi-people me-2"></i>Users</button>
@@ -28,10 +28,16 @@
             <li class="nav-item" role="presentation">
                 <button class="nav-link @(Model == "settings" ? "active" : "")" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings-tab-pane" type="button" role="tab"><i class="bi bi-gear me-2"></i>Settings</button>
             </li>
+            @if (enableAuth)
+            {
+                <li class="nav-item">
+                    <button class="nav-link" onclick="performLogOut()"><i class="bi bi-box-arrow-right me-2"></i>Logout</button>
+                </li>
+            }
         }
-        @if (enableAuth)
+        else if (enableAuth)
         {
-            <li class="nav-item">
+            <li class="nav-item ms-auto">
                 <button class="nav-link" onclick="performLogOut()"><i class="bi bi-box-arrow-right me-2"></i>Logout</button>
             </li>
         }
@@ -57,5 +63,8 @@
 </div>
 <script>
     loadGarage();
-    loadSettings();
+    @if (User.IsInRole(nameof(UserModel.IsRootUser)))
+    {
+        @:loadSettings();
+    }
 </script>
