--- a/Views/Login/_Users.cshtml
+++ b/Views/Login/_Users.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<UserModel>
+﻿@using CarCareTracker.Helper
+@model List<UserModel>
 <div class="row">
     <div class="d-flex justify-content-between">
         <div class="d-flex align-items-center flex-wrap">
@@ -27,11 +28,11 @@
                 {
                     <tr class="d-flex" style="cursor:pointer;">
                         <td class="col-3">@user.UserName</td>
-                        <td class="col-2">@user.CanAdd</td>
-                        <td class="col-3">@user.CanEdit</td>
-                        <td class="col-3">@user.CanDelete</td>
-                        <td class="col-3">@user.IsActive</td>
-                        <td class="col-3"><button type="button" class="btn btn-danger" onclick=""><i class="bi bi-trash"></i></button></td>
+                        <td class="col-2"><input class="form-check-input" type="checkbox" value="" onchange="updateUser(@user.Id)" id="checkCanAdd_@(user.Id)" @(StaticHelper.CheckedIfTrue(user.CanAdd)) /></td>
+                        <td class="col-2"><input class="form-check-input" type="checkbox" value="" onchange="updateUser(@user.Id)" id="checkCanEdit_@(user.Id)" @(StaticHelper.CheckedIfTrue(user.CanEdit)) /></td>
+                        <td class="col-2"><input class="form-check-input" type="checkbox" value="" onchange="updateUser(@user.Id)" id="checkCanDelete_@(user.Id)" @(StaticHelper.CheckedIfTrue(user.CanDelete)) /></td>
+                        <td class="col-2"><input class="form-check-input" type="checkbox" value="" onchange="updateUser(@user.Id)" id="checkIsActive_@(user.Id)" @(StaticHelper.CheckedIfTrue(user.IsActive)) /></td>
+                        <td class="col-1"><button type="button" class="btn btn-danger" onclick=""><i class="bi bi-trash"></i></button></td>
                     </tr>
                 }
             </tbody>
@@ -39,33 +40,24 @@
     </div>
 </div>
 <script>
-    function showAddUser() {
-        Swal.fire({
-            title: 'Setup Credentials',
-            html: `
-                        <input type="text" id="authUsername" class="swal2-input" placeholder="Username">
-                        <input type="password" id="authPassword" class="swal2-input" placeholder="Password">
-                        `,
-            confirmButtonText: 'Setup',
-            focusConfirm: false,
-            preConfirm: () => {
-                const username = $("#authUsername").val();
-                const password = $("#authPassword").val();
-                if (!username || !password) {
-                    Swal.showValidationMessage(`Please enter username and password`)
-                }
-                return { username, password }
-            },
-        }).then(function (result) {
-            if (result.isConfirmed) {
-                $.post('/Login/CreateUser', { userName: result.value.username, password: result.value.password }, function (data) {
-                    if (data) {
-                        //callback to reload users page.
-                    } else {
-                        errorToast("An error occurred, please try again later.");
-                    }
-                });
-            };
-        });
+    function updateUser(userId) {
+        var userCanAdd = $(`#checkCanAdd_${userId}`).is(":checked");
+        var userCanEdit = $(`#checkCanEdit_${userId}`).is(":checked");
+        var userCanDelete = $(`#checkCanDelete_${userId}`).is(":checked");
+        var userIsActive = $(`#checkIsActive_${userId}`).is(":checked");
+        var userModel = {
+            id: userId,
+            canAdd: userCanAdd,
+            canEdit: userCanEdit,
+            canDelete: userCanDelete,
+            isActive: userIsActive
+        }
+        $.post('/Login/UpdateUser', {userModel: userModel}, function(data){
+            if (data){
+                successToast("User Updated");
+            } else {
+                errorToast("An error occurred, please try again later.");
+            }
+        })
     }
 </script>
